# physics-12

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/render/: camera.rs  frag.glsl  mod.rs  vert.glsl
src/sim/: charge.rs  gravity.rs  mod.rs
src/world/: mod.rs
